fix alignment

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -5,7 +5,6 @@
 body {
   font-family: $font;
   background-color: color(light-grayish-cyan);
-  padding-top: 50px;
   min-height: 100vh;
 }
 
@@ -13,7 +12,7 @@ body {
   display: block;
   margin: 0 auto 40px;
   @media (min-width: $breakpoint) {
-    margin: 163px auto 88px;
+    margin: div(163px, 1024px) * 100vh auto 88px;
   }
 }
 
@@ -33,7 +32,7 @@ body {
     flex-direction: row;
     padding: 32px 32px;
     max-width: 920px;
-    margin-bottom: 240px;
+    margin-bottom: div(239px, 1024px) * 100vh;
   }
 }
 
